--- a/manifest.yml
+++ b/manifest.yml
@@ -1,5 +1,5 @@
 ---
-name: RStudio Server + Spark
+name: RStudio Server + Spark (Singularity)
 category: Interactive Apps
 subcategory: Servers
 role: batch_connect
